--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.9.11+12
+version: 0.9.11+13
+# TestFlight version: 0.0.1+9
 
 environment:
   sdk: ">=2.17.0 <3.0.0"
