--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -93,7 +93,7 @@ BEGIN
             VALUE "FileDescription", "Liftoff" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "Liftoff" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2020 com.zachatrocity. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2020 com.liftoffapp. All rights reserved." "\0"
             VALUE "OriginalFilename", "liftoff.exe" "\0"
             VALUE "ProductName", "Liftoff" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
