--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
     sdk: flutter
   wc_form_validators: ^1.0.0
   file_picker: ^5.3.2
+  double_back_to_close_app: ^2.1.0
 
 dev_dependencies:
   flutter_test:
