Add gesture navigation
Turns out there's a convenient library caled swipeable_page_route that
adds exactly the behavior that other aps like Reddit Sync and Apollo did.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter_markdown: ^0.6.1
   flutter_typeahead: ^4.0.0
   modal_bottom_sheet: ^3.0.0-pre
+  swipeable_page_route: ^0.4.0
 
   # native
   share_plus: ^7.0.2
