--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,10 +49,10 @@ dependencies:
   timeago: ^3.0.2
   fuzzy: ^0.4.0-nullsafety.0
   lemmy_api_client:
-    # git:
-    #   url: https://github.com/liftoff-app/lemmy_api_client.git
-    #   ref: master
-    path: ../lemmy_api_client
+    git:
+      url: https://github.com/liftoff-app/lemmy_api_client.git
+      ref: master
+    # path: ../lemmy_api_client
   intl: ^0.18.0
   matrix4_transform: ^2.0.0
   json_annotation: ^4.8.1
