--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,9 @@ name: ci
 
 on:
   push:
-    branches: [master]
+    branches: 
+      - master
+      - gesture-nav
   pull_request:
     branches: [master]
 
