Remove the extra branch trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ on:
   push:
     branches: 
       - master
-      - gesture-nav
   pull_request:
-    branches: [master]
+    branches: 
+      - master
 
 jobs:
   lint:
