--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,12 +55,11 @@ jobs:
         run: |
           echo "${{ secrets.SIGNING_KEY }}" | base64 -d | tee key.jks >/dev/null
 
-      - name: Android build (Pull Request)
+      - name: Generate debug keystore (Pull Request)
         if: github.event_name == 'pull_request'
-        run: flutter build apk --split-per-abi --release --target lib/main_prod.dart --flavor prod 
+        run: keytool -genkey -v -keystore key.jks -alias androiddebugkey -storepass android -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
       
-      - name: Android build (Master Branch)
-        if: github.ref == 'refs/heads/master'
+      - name: Android build
         env:
           ANDROID_KEY_ALIAS: ${{ secrets.ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
