--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
       - name: Generate debug keystore (Pull Request)
         if: github.event_name == 'pull_request'
-        run: keytool -genkey -v -keystore key.jks -alias androiddebugkey -storepass android -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
+        run: keytool -genkey -v -keystore /home/runner/work/liftoff/liftoff/android/app/key.jks -alias androiddebugkey -storepass android -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
       
       - name: Android build (Pull Request)
         if: github.event_name == 'pull_request'
@@ -69,10 +69,6 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
           echo "${{ secrets.SIGNING_KEY }}" | base64 -d | tee key.jks >/dev/null
-          
-      - name: Android build (Pull Request)
-        if: github.event_name == 'pull_request'
-        run: flutter build apk --split-per-abi --release --target lib/main_prod.dart 
       
       - name: Android build (Master Branch)
         if: github.event_name != 'pull_request'
