--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,5 @@
-# Uncomment this line to define a global platform for your project
-# MYKL: prevent an error message
-platform :ios, '14.0'
+# Don't delete this file, `post_install` has a fix in it.
+platform :ios, '12.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -38,5 +37,15 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+  end
+
+  # align deployed versions, to fix very unintuitive bug.
+  # https://stackoverflow.com/questions/75574268/missing-file-libarclite-iphoneos-a-xcode-14-3/75924853#75924853
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      end
+    end
   end
 end
