--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   path_provider: ^2.0.15
   path: ^1.8.3
+  image: ^4.0.17
 
 # https://github.com/flutter/flutter/issues/127425
 dependency_overrides:
