--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
   path_provider: ^2.0.15
   path: ^1.8.3
   app_links: ^3.4.3
+  flutter_custom_tabs: ^1.0.4
 
 # https://github.com/flutter/flutter/issues/127425
 dependency_overrides:
