--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,10 +53,10 @@ dependencies:
   timeago: ^3.0.2
   fuzzy: ^0.4.0-nullsafety.0
   lemmy_api_client:
-    # git:
-    #   url: https://github.com/liftoff-app/lemmy_api_client.git
-    #   ref: master
-    path: ../lemmy_api_client
+    git:
+      url: https://github.com/liftoff-app/lemmy_api_client.git
+      ref: master
+    # path: ../lemmy_api_client
   intl: ^0.18.0
   matrix4_transform: ^2.0.0
   json_annotation: ^4.8.1
@@ -75,7 +75,6 @@ dependencies:
   flutter_colorpicker: ^1.0.3
   path_provider: ^2.0.15
   path: ^1.8.3
-  app_links: ^3.4.3
 
 # https://github.com/flutter/flutter/issues/127425
 dependency_overrides:
