--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,7 @@ dependencies:
   image: ^4.0.17
   app_links: ^3.4.3
   flutter_custom_tabs: ^1.0.4
+  appinio_video_player: ^1.2.1
 
 # https://github.com/flutter/flutter/issues/127425
 dependency_overrides:
