--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   package_info_plus: ^4.0.2
   image_picker: ^0.8.4
   extended_image: ^8.0.2
+  image_editor: ^1.3.0  
   gallery_saver: ^2.3.2
   flutter_cache_manager: ^3.3.0
   permission_handler: ^10.4.0
