--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,6 +114,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - CHANGELOG.md
+    - CODE_OF_CONDUCT.md
+    - PRIVACY_POLICY.md
     - assets/app_icon.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
