--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,127 +1,60 @@
+include: package:flutter_lints/flutter.yaml
+
 linter:
   rules:
-    - annotate_overrides
     - avoid_bool_literals_in_conditional_expressions
     - avoid_catching_errors
     - avoid_equals_and_hash_code_on_mutable_classes
     - avoid_escaping_inner_quotes
     - avoid_final_parameters
-    - avoid_function_literals_in_foreach_calls
-    - avoid_init_to_null
-    - avoid_null_checks_in_equality_operators
     - avoid_positional_boolean_parameters
-    - avoid_print
     - avoid_private_typedef_functions
     - avoid_redundant_argument_values
-    - avoid_relative_lib_imports
-    - avoid_return_types_on_setters
     - avoid_returning_null
-    - avoid_returning_null_for_void
     - avoid_returning_this
     - avoid_setters_without_getters
-    - avoid_single_cascade_in_expression_statements
     - avoid_type_to_string
-    - avoid_unnecessary_containers
     - avoid_unused_constructor_parameters
     - avoid_void_async
-    - await_only_futures
-    - camel_case_extensions
-    - camel_case_types
     - cascade_invocations
     - cast_nullable_to_non_nullable
-    - constant_identifier_names
     - conditional_uri_does_not_exist
-    - curly_braces_in_flow_control_structures
     - directives_ordering
-    - empty_catches
-    - empty_constructor_bodies
     - eol_at_end_of_file
-    - exhaustive_cases
-    - file_names
-    - hash_and_equals
-    - implementation_imports
-    - library_names
-    - library_prefixes
     - literal_only_boolean_expressions
-    - non_constant_identifier_names
     - noop_primitive_operations
-    - no_leading_underscores_for_library_prefixes
-    - no_leading_underscores_for_local_identifiers
-    - null_check_on_nullable_type_parameter
     - omit_local_variable_types
     - one_member_abstracts
     - package_api_docs
     - parameter_assignments
-    - prefer_adjacent_string_concatenation
     - prefer_asserts_in_initializer_lists
-    - prefer_collection_literals
-    - prefer_conditional_assignment
-    - prefer_const_constructors
-    - prefer_const_constructors_in_immutables
-    - prefer_const_declarations
-    - prefer_const_literals_to_create_immutables
     - prefer_constructors_over_static_methods
-    - prefer_contains
-    - prefer_final_fields
     - prefer_final_in_for_each
     - prefer_final_locals
-    - prefer_for_elements_to_map_fromIterable
-    - prefer_function_declarations_over_variables
-    - prefer_generic_function_type_aliases
     - prefer_if_elements_to_conditional_expressions
-    - prefer_if_null_operators
-    - prefer_initializing_formals
     - prefer_int_literals
-    - prefer_interpolation_to_compose_strings
-    - prefer_is_empty
-    - prefer_is_not_empty
-    - prefer_is_not_operator
-    - prefer_iterable_whereType
     - prefer_mixin
-    - prefer_null_aware_operators
     - prefer_relative_imports
     - prefer_single_quotes
-    - prefer_spread_collections
-    - prefer_typing_uninitialized_variables
-    - recursive_getters
     - secure_pubspec_urls
-    - sized_box_for_whitespace
     - sized_box_shrink_expand
-    - slash_for_doc_comments
-    - sort_child_properties_last
     - sort_unnamed_constructors_first
     - tighten_type_of_initializing_formals
     - type_annotate_public_apis
-    - type_init_formals
     - unawaited_futures
-    - unnecessary_brace_in_string_interps
-    - unnecessary_const
-    - unnecessary_constructor_name
-    - unnecessary_getters_setters
     - unnecessary_lambdas
-    - unnecessary_late
-    - unnecessary_new
-    - unnecessary_null_aware_assignments
     - unnecessary_null_checks
-    - unnecessary_null_in_if_null_operators
     - unnecessary_parenthesis
     - unnecessary_raw_strings
-    - unnecessary_string_escapes
-    - unnecessary_string_interpolations
-    - unnecessary_this
-    - unrelated_type_equality_checks
     - use_colored_box
     - use_enums
-    - use_full_hex_values_for_flutter_colors
     - use_is_even_rather_than_modulo
     - use_named_constants
     - use_raw_strings
-    - use_rethrow_when_possible
     - use_setters_to_change_properties
     - use_super_parameters
     - use_test_throws_matchers
     - use_to_and_as_if_applicable
-    - void_checks
 
 analyzer:
   exclude:
