Add flutter_lints and remove duplicate rules

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dev_dependencies:
   build_runner: ^2.1.2
   mobx_codegen: ^2.0.2
   freezed: ^2.0.2
+  flutter_lints: ^2.0.2
 
 # To refresh: `pub run flutter_launcher_icons`
 flutter_launcher_icons:
