--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   logging: ^1.0.1
   nested: ^1.0.0
   l10n_esperanto: ^2.0.5
+  uuid: ^3.0.7
 
   flutter:
     sdk: flutter
@@ -95,6 +96,7 @@ dev_dependencies:
   build_runner: ^2.1.2
   mobx_codegen: ^2.0.2
   freezed: ^2.0.2
+  flutter_lints: ^2.0.2
 
 # To refresh: `pub run flutter_launcher_icons`
 flutter_launcher_icons:
