--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@
 /build/
 lib/l10n/gen
 # We regenerate this every time due to logic in Podfile `post_install` section.
-/ios/Podfile.lock
+ios/Podfile.lock
 
 # Web related
 lib/generated_plugin_registrant.dart
