--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: ci
 
 on:
   push:
-    branches: 
+    branches:
       - master
   pull_request:
-    branches: 
+    branches:
       - master
 
 jobs:
@@ -54,7 +54,7 @@ jobs:
       - name: Generate debug keystore (Pull Request)
         if: github.event_name == 'pull_request'
         run: keytool -genkey -v -keystore /home/runner/work/liftoff/liftoff/android/app/key.jks -alias androiddebugkey -storepass android -keypass android -keyalg RSA -keysize 2048 -validity 10000 -dname "CN=Android Debug,O=Android,C=US"
-      
+
       - name: Android build (Pull Request)
         if: github.event_name == 'pull_request'
         env:
@@ -69,7 +69,7 @@ jobs:
         if: github.event_name != 'pull_request'
         run: |
           echo "${{ secrets.SIGNING_KEY }}" | base64 -d | tee key.jks >/dev/null
-      
+
       - name: Android build (Master Branch)
         if: github.event_name != 'pull_request'
         env:
@@ -116,15 +116,18 @@ jobs:
       - name: Build
         run: |
           flutter build linux --release --target lib/main_prod.dart
-      
+
       - name: Package AppImage
         run: |
-          wget -q https://github.com/AppImage/AppImageKit/releases/download/13/appimagetool-x86_64.AppImage
-          wget -qO AppDir/AppRun https://github.com/AppImage/AppImageKit/releases/download/13/AppRun-x86_64
+          mkdir -p AppDir/usr/bin
+          cp assets/liftoff.desktop AppDir
+          cp assets/app_icon.png AppDir/liftoff.png
+          wget -q https://github.com/AppImage/AppImageKit/releases/download/continuous/appimagetool-x86_64.AppImage
+          wget -qO AppDir/AppRun https://github.com/AppImage/AppImageKit/releases/download/continuous/AppRun-x86_64
           chmod +x appimagetool-x86_64.AppImage AppDir/AppRun
-          cp -r build/linux/x64/release/bundle/* AppDir
+          cp -r build/linux/x64/release/bundle/* AppDir/usr/bin
           ./appimagetool-x86_64.AppImage AppDir liftoff.AppImage
-        
+
       - uses: actions/upload-artifact@v2
         with:
           name: linux-appimage
