--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          flutter-version: '3.10.6'
 
       - name: Get dependencies
         run: flutter pub get
@@ -49,7 +49,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          flutter-version: '3.10.6'
 
       - name: Generate debug keystore (Pull Request)
         if: github.event_name == 'pull_request'
@@ -93,7 +93,7 @@ jobs:
 
       - uses: subosito/flutter-action@v2
         with:
-          channel: "stable"
+          flutter-version: '3.10.6'
 
       - run: flutter build ios --no-codesign --release --target lib/main_prod.dart --flavor prod
 
@@ -106,7 +106,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          flutter-version: '3.10.6'
 
       - name: Get additional dependencies
         run: |
@@ -126,7 +126,7 @@ jobs:
 
       - uses: subosito/flutter-action@v1
         with:
-          channel: "stable"
+          flutter-version: '3.10.6'
 
       - name: Build
         run: |
